tests/fixtures/positive/style/MaxLineLength.kt
package style

fun example(firstParameter: Int, secondParameter: Int, thirdParameter: Int, fourthParameter: Int, fifthParameter: Int): Int {
    return firstParameter + secondParameter + thirdParameter + fourthParameter + fifthParameter + firstParameter + secondParameter
}
