tests/fixtures/negative/style/AbstractClassCanBeInterface.kt
package style

abstract class Foo(val x: Int) {
    abstract fun bar()
}
